--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,5 +25,15 @@ jobs:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
 
- 
+      - name: Set project
+        run: gcloud config set project kubernetes-459916
+
+      - name: Install gcloud auth plugin
+        run: gcloud components install gke-gcloud-auth-plugin
+
+      - name: Generate Kubeconfig
+        run: gcloud container clusters get-credentials cluster-1 --region us-central1 --project kubernetes-459916
+
+      - name: Test
+        run: kubectl get nodes 
 
