--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,22 @@
 name: CD 
 
 on: 
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
+
+  workflow_dispatch: 
+    inputs: 
+      image:
+        description: 'Docker image to deploy'
+        required: true
+        default: ''
+
+      tag:
+        description: 'Docker image tag to deploy'
+        required: true
+        default: ''
+
 
 
 jobs: 
